# verifier_simplified

./: Cargo.toml
pallets/tradestorage/: Cargo.toml
pallets/tradestorage/src/: lib.rs
pallets/verifier/: Cargo.toml
pallets/verifier/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
